--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
-  "name": "jwt-node-auth",
+  "name": "netlify-functions-example",
   "version": "1.0.0",
-  "description": "",
+  "main": "index.js",
+  "repository": "https://github.com/nadirbad/netlify-functions-example.git",
+  "author": "Nadir Badnjevic <nadirbad@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "netlify-lambda": "^1.4.3"
+  },
   "scripts": {
     "dev": "netlify-lambda serve functions",
     "build": "netlify-lambda build functions"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dansari2020/jwt-node-auth.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dansari2020/jwt-node-auth/issues"
-  },
-  "homepage": "https://github.com/dansari2020/jwt-node-auth#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11",
-    "netlify-lambda": "^2.0.7",
-    "serverless-http": "^2.7.0"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "braintree": "^2.15.0",
+    "dotenv": "^7.0.0"
   }
 }
